--- a/src/components/CreateLottery/CreateLottery.module.scss
+++ b/src/components/CreateLottery/CreateLottery.module.scss
@@ -14,7 +14,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 0.5rem;
 }
 
@@ -160,6 +160,6 @@
     }
 
     .inputField {
-        min-width: 90px;
+        min-width: 300px !important;
     }
 }
