--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,11 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /*debug fragment*/
+  /*border-style: solid;
+  border-width: 1px;
+  border-color: red;*/
 }
 
 html {
