--- a/src/components/LotteryList/LotteryList.module.scss
+++ b/src/components/LotteryList/LotteryList.module.scss
@@ -2,10 +2,21 @@
     padding: 2rem 0;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
 .title {
-    margin-bottom: 2rem !important;
+    margin-bottom: 0 !important;
     text-align: center;
     font-weight: bold;
+}
+
+.viewAllButton {
+    white-space: nowrap;
 }
 
 .card {
@@ -55,13 +66,26 @@
     height: 50vh;
 }
 
+.fillButton {
+    margin-top: 1rem !important;
+}
+
 @media (max-width: 600px) {
     .container {
         padding: 1rem;
     }
 
+    .header {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     .title {
         font-size: 1.5rem;
+    }
+
+    .viewAllButton {
+        width: 100%;
     }
 
     .numberCircle {
@@ -69,9 +93,4 @@
         height: 1.5rem;
         font-size: 0.9rem;
     }
-}
-
-.fillButton {
-    margin-top: 1rem !important;
-    width: 100%;
 }
