--- a/src/components/CreateLottery/CreateLottery.module.scss
+++ b/src/components/CreateLottery/CreateLottery.module.scss
@@ -28,7 +28,7 @@
 
 .inputContainer {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 0.5rem;
     width: 100%;
     justify-content: space-between;
@@ -162,4 +162,10 @@
     .inputField {
         min-width: 300px !important;
     }
+}
+
+.rowInput {
+    display: flex;
+    align-items: stretch;
+    gap: 8px;
 }
