--- a/src/components/LotteryList/LotteryList.module.scss
+++ b/src/components/LotteryList/LotteryList.module.scss
@@ -10,7 +10,7 @@
 }
 
 .title {
-    margin-bottom: 0 !important;
+    margin-bottom: 1rem !important;
     text-align: center;
     font-weight: bold;
 }
