--- a/src/components/SudokuLottery/SudokuLottery.module.scss
+++ b/src/components/SudokuLottery/SudokuLottery.module.scss
@@ -10,6 +10,7 @@ $error-color: #d32f2f;
   margin: 20px auto;
   padding: 20px;
   border-radius: 8px;
+  transition: opacity 0.3s;
 }
 
 .title {
@@ -39,7 +40,7 @@ $error-color: #d32f2f;
   margin-left: 15px;
   font-size: 1rem;
   padding: 8px 16px;
-  background-color: #FFF;
+  background-color: #fff;
   color: #000;
   border-style: solid;
   border-width: 1px;
@@ -48,7 +49,7 @@ $error-color: #d32f2f;
   transition: background-color 0.3s ease;
   &:hover {
     background-color: #000;
-    color: #FFF;
+    color: #fff;
   }
 }
 
@@ -56,7 +57,8 @@ $error-color: #d32f2f;
   border-collapse: collapse;
   margin: 20px auto;
 
-  td, th {
+  td,
+  th {
     padding: 0;
   }
 }
@@ -70,7 +72,9 @@ $error-color: #d32f2f;
   font-size: 1.25rem;
   cursor: pointer;
   background: #fff;
-  transition: background-color 0.2s ease, color 0.2s ease;
+  transition:
+    background-color 0.2s ease,
+    color 0.2s ease;
 }
 
 .cell:not(.filled):hover {
@@ -141,8 +145,17 @@ $error-color: #d32f2f;
   color: $secondary-color;
 }
 
-.messages {
+.messagesWrap {
+  position: relative;
   margin-top: 20px;
+  height: 24px;
+}
+
+.messages {
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%, 100%);
   min-height: 24px;
   text-align: center;
   font-weight: bold;
@@ -158,4 +171,9 @@ $error-color: #d32f2f;
     flex-direction: column;
     align-items: center;
   }
+}
+
+.boardTransparent {
+  opacity: 0.75;
+  pointer-events: none;
 }
