--- a/src/assets/icons/StolotoIcon/StolotoIcon.module.scss
+++ b/src/assets/icons/StolotoIcon/StolotoIcon.module.scss
@@ -1,4 +1,6 @@
 .icon {
-    filter: invert(1);
     width: 160px;
+    height: 80px;
+    transform: scale(3) translate(5%, 74%);
+    transform-origin: bottom;
 }
