finish info pages

--- a/src/assets/icons/StolotoIcon/StolotoIcon.module.scss
+++ b/src/assets/icons/StolotoIcon/StolotoIcon.module.scss
@@ -3,4 +3,6 @@
     height: 80px;
     transform: scale(3) translate(5%, 74%);
     transform-origin: bottom;
+    pointer-events: none;
+    user-select: none;
 }
